--- a/package.json
+++ b/package.json
@@ -1,8 +1,26 @@
 {
-  "name": "react-design-system-workshop",
+  "name": "helenes-designsystem",
   "private": false,
-  "version": "0.0.2",
+  "description": "Helenes designsystem, som inneholder en tekstboks",
+  "version": "1.0.0",
   "type": "module",
+  "main": "dist/index.umd.js",
+  "module": "dist/index.es.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.es.js",
+      "require": "./dist/index.umd.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./styles": "./dist/style.css"
+  },
+  "files": [
+    "/dist"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -11,10 +29,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.15",
+    "@types/node": "^22.15.17",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-i-praksis-pakker-ds": "^1.0.0",
-    "tailwindcss": "^4.0.15"
+    "tailwindcss": "^4.0.15",
+    "vite-plugin-dts": "^4.5.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
